# kanban-backend

./: manage.py  pyproject.toml
kanban/: admin.py  choices.py  models.py  routes.py  serializers.py  views.py
kanban/migrations/: 0001_initial.py
kanbanbackend/: asgi.py  settings.py  urls.py  wsgi.py
user/: routes.py  serializers.py  views.py
